# Star_Dodgers

./: .gitignore  README.md  Star_Dodgers.sln
Release/Resources/Shaders/: screenshake.glsl
Star_Dodgers/: CBall.cpp  CBall.cpp.orig  CBall.h  CControlsMenu.cpp  CControlsMenu.h  CGameManager.cpp  CGameManager.h  CGameScene.cpp  CGameScene.h  CGameSettings.cpp  CGameSettings.h  CGamepad.cpp  CGamepad.cpp.orig  CGamepad.h  CGamepad.h.orig  CLobby.cpp  CLobby.h  CMainMenu.cpp  CMainMenu.h  CMakeCache.txt  CMakeLists.txt  CMath.h  CPackConfig.cmake  CPackSourceConfig.cmake  CPlayer.cpp  CPlayer.h  CPostGameScene.cpp  CPostGameScene.h  CPostProcessing.cpp  CPostProcessing.h  CPrint.h  CResourceHolder.cpp  CResourceHolder.h  CSceneBase.h  CTeamsManager.cpp  CTeamsManager.h  CTestTestfile.cmake  CUIBar.cpp  CUIBar.h  CUIImage.cpp  (+21 more)
Star_Dodgers/Resources/Shaders/: screenshake.glsl  starry.glsl  starry.html
